--- a/index.html
+++ b/index.html
@@ -5,9 +5,81 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calvin</title>
+    <link rel="stylesheet" href="css/style.css" type="text/css">
+    <script src="js/jquery-3.6.0.min.js"></script>
+    <script src="js/script.js"></script>
 </head>
 <body>
-    <div>안녕하세요</div>
-    <div>반갑습니다</div>
+<div class="wrap">
+    <header>
+        <div class="nav_bg">
+            <li><a href="#"></a></li>
+        </div>
+        <div class="topbar_wrap">
+            <div class="logo_box">
+                <ul>
+                    <li><a href="#"><img src="images/logo.png" alt="Calvin"></a></li>
+                </ul>
+            </div>
+            <div class="nav_box">
+                <ul class="nav">
+                    <li><a href="#">NEW</a>
+                    <ul class="sub_nav">
+                        <li><a href="#"></a></li>
+                    </ul>
+                    </li>
+                    <li><a href="#">MEN</a>
+                    <ul class="sub_nav">
+                    <li><a href="#"></a></li>
+                    </ul>
+                    </li>
+                    <li><a href="#">WOMEN</a>
+                    <ul class="sub_nav">
+                    <li><a href="#"></a></li>
+                    </ul>
+                    </li>
+                    <li><a href="#">UNDERWEAR</a>
+                    <ul class="sub_nav">
+                    <li><a href="#"></a></li>
+                    </ul>
+                    </li>
+                    <li><a href="#">SPORTS</a>
+                    <ul class="sub_nav">
+                    <li><a href="#"></a></li>
+                    </ul>
+                    </li>
+                    <li><a href="#">ACCESSORY</a>
+                    <ul class="sub_nav">
+                    <li><a href="#"></a></li>
+                    </ul>
+                    <li><a href="#">KIDS</a>
+                    <ul class="sub_nav">
+                    <li><a href="#"></a></li>
+                    </ul>
+                    </li>
+                    <li><a href="#">JEANS</a>
+                    <ul class="sub_nav">
+                    <li><a href="#"></a></li>
+                    </ul>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </header>
+    <ul class="slide">
+        <li><a href="#"><img src="images/메인 1.png" alt="Calvin"></a></li>
+    </ul>
+    <div class="contents">
+        <section class="new_box">
+            <ul class="new_nav"></ul>
+            <ul class="new_rang"></ul>
+        </section>
+        <section class="collection_box"></section>
+        <section class="best_box"></section>
+        <section class="preview_box"></section>
+        <section class="lookbook_box"></section>
+    </div>
+</div>
+    
 </body>
 </html>
