--- a/index.html
+++ b/index.html
@@ -11,55 +11,93 @@
 </head>
 <body>
 <div class="wrap">
-    <header>
+    <header class="clearfix">
         <div class="nav_bg">
             <li><a href="#"></a></li>
         </div>
-        <div class="topbar_wrap">
+        <div class="topbar_wrap clearfix">
             <div class="logo_box">
-                <ul>
-                    <li><a href="#"><img src="images/logo.png" alt="Calvin"></a></li>
-                </ul>
+                <li><a href="#"><img src="images/logo.png" alt="Calvin"></a></li>
             </div>
             <div class="nav_box">
-                <ul class="nav">
+                <ul class="main clearfix">
                     <li><a href="#">NEW</a>
-                    <ul class="sub_nav">
-                        <li><a href="#"></a></li>
+                    <ul class="sub_menu">
+                        <li><a href="#">APPARELS</a></li>
+                        <li><a href="#">UNDERWEAR</a></li>
+                        <li><a href="#">ACC</a></li>
                     </ul>
                     </li>
                     <li><a href="#">MEN</a>
-                    <ul class="sub_nav">
-                    <li><a href="#"></a></li>
+                    <ul class="sub_menu">
+                        <li><a href="#">OUTER</a></li>
+                        <li><a href="#">SWEATSHIRTS</a></li>
+                        <li><a href="#">T-SHIRTS</a></li>
+                        <li><a href="#">SHIRTS/SWEATER</a></li>
+                        <li><a href="#">PANTS</a></li>
+                        <li><a href="#">ACC</a></li>
                     </ul>
                     </li>
                     <li><a href="#">WOMEN</a>
-                    <ul class="sub_nav">
-                    <li><a href="#"></a></li>
+                    <ul class="sub_menu">
+                        <li><a href="#">OUTER</a></li>
+                        <li><a href="#">SWEATSHIRTS</a></li>
+                        <li><a href="#">T-SHIRTS</a></li>
+                        <li><a href="#">SHIRTS/SWEATER</a></li>
+                        <li><a href="#">OPS</a></li>
+                        <li><a href="#">PANTS</a></li>
+                        <li><a href="#">ACC</a></li>
                     </ul>
                     </li>
                     <li><a href="#">UNDERWEAR</a>
-                    <ul class="sub_nav">
-                    <li><a href="#"></a></li>
+                    <ul class="sub_menu">
+                        <li><a href="#">MULTIPACK</a></li>
+                        <li><a href="#">BRA</a></li>
+                        <li><a href="#">PANTY</a></li>
+                        <li><a href="#">NIGHTWEAR</a></li>
+                        <li><a href="#">SWIMSUIT</a></li>
                     </ul>
                     </li>
                     <li><a href="#">SPORTS</a>
-                    <ul class="sub_nav">
-                    <li><a href="#"></a></li>
+                    <ul class="sub_menu">
+                        <li><a href="#">OUTER</a></li>
+                        <li><a href="#">SWEATSHIRTS</a></li>
+                        <li><a href="#">T-SHIRTS</a></li>
+                        <li><a href="#">BRA</a></li>
+                        <li><a href="#">LEGGINGS</a></li>
+                        <li><a href="#">OPS</a></li>
+                        <li><a href="#">SKIRT</a></li>
+                        <li><a href="#">PANTS</a></li>
+                        <li><a href="#">WORKOUT ACC</a></li>
                     </ul>
                     </li>
                     <li><a href="#">ACCESSORY</a>
-                    <ul class="sub_nav">
-                    <li><a href="#"></a></li>
+                    <ul class="sub_menu">
+                        <li><a href="#">BAG</a></li>
+                        <li><a href="#">BELT</a></li>
+                        <li><a href="#">SHOES</a></li>
+                        <li><a href="#">SHOCKS</a></li>
+                        <li><a href="#">WALLET</a></li>
                     </ul>
                     <li><a href="#">KIDS</a>
-                    <ul class="sub_nav">
-                    <li><a href="#"></a></li>
+                    <ul class="sub_menu">
+                        <li><a href="#"></a></li>
+                        <li><a href="#"></a></li>
+                        <li><a href="#"></a></li>
+                        <li><a href="#"></a></li>
                     </ul>
                     </li>
                     <li><a href="#">JEANS</a>
-                    <ul class="sub_nav">
-                    <li><a href="#"></a></li>
+                    <ul class="sub_menu">
+                        <li><a href="#"></a></li>
+                        <li><a href="#"></a></li>
+                    </ul>
+                    </li>
+                    <li><a href="#">SALE</a>
+                    <ul class="sub_menu">
+                        <li><a href="#"></a></li>
+                        <li><a href="#"></a></li>
+                        <li><a href="#"></a></li>
                     </ul>
                     </li>
                 </ul>
@@ -70,14 +108,14 @@
         <li><a href="#"><img src="images/메인 1.png" alt="Calvin"></a></li>
     </ul>
     <div class="contents">
-        <section class="new_box">
+        <section class="new_banner">
             <ul class="new_nav"></ul>
             <ul class="new_rang"></ul>
         </section>
-        <section class="collection_box"></section>
-        <section class="best_box"></section>
-        <section class="preview_box"></section>
-        <section class="lookbook_box"></section>
+        <section class="collection_banner"></section>
+        <section class="best_banner"></section>
+        <section class="preview_banner"></section>
+        <section class="lookbook_banner"></section>
     </div>
 </div>
     
