--- a/index.html
+++ b/index.html
@@ -81,10 +81,9 @@
                     </ul>
                     <li><a href="#">KIDS</a>
                     <ul class="sub_menu">
-                        <li><a href="#"></a></li>
-                        <li><a href="#"></a></li>
-                        <li><a href="#"></a></li>
-                        <li><a href="#"></a></li>
+                        <li><a href="#">TOP</a></li>
+                        <li><a href="#">BOTTOM</a></li>
+                        <li><a href="#">UNDERWEAR</a></li>
                     </ul>
                     </li>
                     <li><a href="#">JEANS</a>
@@ -108,14 +107,40 @@
         <li><a href="#"><img src="images/메인 1.png" alt="Calvin"></a></li>
     </ul>
     <div class="contents">
-        <section class="new_banner">
-            <ul class="new_nav"></ul>
-            <ul class="new_rang"></ul>
+        <section class="new_banner clearfix">
+            <div class="new_nav">
+                <div class="arriv_title">NEW ARRIVALS</div>
+                <div class="item">
+                 <div class="item1">
+                    <a href="#">
+                        <img src="images/new1.png" alt="뉴어라벌스1">
+                    </a>
+                    <div class="new1_title">남성 레귤러핏 인스티튜셔널 로고 스트레치 반팔 티셔츠</div>
+                 </div>
+                 <div class="item2">
+                    <a href="#">
+                        <img src="images/new2.png" alt="뉴어라벌스2">
+                    </a>
+                    <div class="new2_title">여성 스트레이핏 모노그램 로고 반팔 셔츠</div>
+                 </div>
+                 <div class="item3">
+                    <a href="#">
+                        <img src="images/new3.png" alt="뉴어라벌스3">
+                    </a>
+                    <div class="new3_title">여성 인스티튜셔널 로고 보이프렌드핏 스웨트셔츠</div>
+                 </div>
+                </div>
+            </div>
+            <div class="new_rang"></div>
         </section>
         <section class="collection_banner"></section>
         <section class="best_banner"></section>
         <section class="preview_banner"></section>
-        <section class="lookbook_banner"></section>
+    </div>
+    <div class="lookbook_banner">
+        <li><a href="#">
+            <img src="" alt="">
+        </a></li>
     </div>
 </div>
     
