--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <header class="clearfix">
         <div class="nav_bg">
             <li><a href="#"></a></li>
+            <a href="#">
+                <button class="ck1_btn"></button>
+            </a>
         </div>
         <div class="topbar_wrap clearfix">
             <div class="logo_box">
@@ -108,31 +111,94 @@
     </ul>
     <div class="contents">
         <section class="new_banner clearfix">
-            <div class="new_nav">
-                <div class="arriv_title">NEW ARRIVALS</div>
+        <div class="new_nav">
+            <div class="arriv_title">NEW ARRIVALS</div>
+            <div class="flex justify-between">
                  <div class="item1">
                     <a href="#">
                         <img src="images/new1.png" alt="뉴어라벌스1">
                     </a>
-                    <div class="new1_title">남성 레귤러핏 인스티튜셔널 로고 스트레치 반팔 티셔츠</div>
+                    <div class="new1_title">남성 레귤러핏 인스티튜셔널 로고 스트레치 반팔 티셔츠 <p>KRW 45,000</p></div>
                  </div>
                  <div class="item2">
                     <a href="#">
                         <img src="images/new2.png" alt="뉴어라벌스2">
                     </a>
-                    <div class="new2_title">여성 스트레이핏 모노그램 로고 반팔 셔츠</div>
+                    <div class="new2_title">여성 스트레이핏 모노그램 로고 반팔 셔츠 <p>KRW 79,000</p></div>
                  </div>
                  <div class="item3">
                     <a href="#">
                         <img src="images/new3.png" alt="뉴어라벌스3">
                     </a>
-                    <div class="new3_title">여성 인스티튜셔널 로고 보이프렌드핏 스웨트셔츠</div>
+                    <div class="new3_title">여성 인스티튜셔널 로고 보이프렌드핏 스웨트셔츠 <p>KRW 89,000</p></div>
                 </div>
             </div>
-            <div class="new_rang"></div>
+        </div>
         </section>
-        <section class="collection_banner"></section>
-        <section class="best_banner"></section>
+        <section class="collection_banner">
+            <div class="collec_nav"></div>
+        </section>
+        <section class="best_banner">
+            <div class="best_nav">
+                <div class="best_tit">BEST SELLERS</div>
+                <div class="best_row1">
+                    <div class="flex justify-between">
+                        <div class="item1">
+                            <a href="#">
+                                <img src="images/best1.png" alt="베스트1">
+                            </a>
+                            <div class="best1_title">남성 90’S 스트레이 핏 라이트 블루 데님 <p>KRW 199,000</p></div>
+                        </div>
+                        <div class="item2">
+                            <a href="#">
+                                <img src="images/best2.png" alt="베스트2">
+                            </a>
+                            <div class="best2_title">남성 레귤러핏 인스티튜셔널 로고 스트레치 반팔 티셔츠 <p>KRW 45,000</p></div>
+                        </div>
+                        <div class="item3">
+                            <a href="#">
+                                <img src="images/best3.png" alt="베스트3">
+                            </a>
+                            <div class="best3_title">남여공용 릴렉스핏 헤비 코튼 로고 반팔 티셔츠 <p>KRW 45,000</p></div>
+                        </div>
+                        <div class="item4">
+                            <a href="#">
+                                <img src="images/best4.png" alt="베스트4">
+                            </a>
+                            <div class="best4_title">남성 레귤러핏 90’S 라이트 블루 데님 재킷 <p>KRW 199,000</p></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="best_row2">
+                    <div class="flex justify-between">
+                        <div class="item5">
+                            <a href="#">
+                                <img src="images/best5.png" alt="베스트5">
+                            </a>
+                            <div class="best5_title">여성 릴렉스핏 유틸리티 재킷 <p>KRW 239,000</p></div>
+                        </div>
+                        <div class="item6">
+                            <a href="#">
+                                <img src="images/best6.png" alt="베스트6">
+                            </a>
+                            <div class="best6_title">여성 90’S 크롭 데님 재킷 <p>KRW 199,000</p></div>
+                        </div>
+                        <div class="item7">
+                            <a href="#">
+                                <img src="images/best7.png" alt="베스트7">
+                            </a>
+                            <div class="best7_title">여성 슬림핏 인스티튜셔널 로고 반팔 티셔츠 <p>KRW 45,000</p></div>
+                        </div>
+                        <div class="item8">
+                            <a href="#">
+                                <img src="images/best8.png" alt="베스트8">
+                            </a>
+                            <div class="best8_title">여성 슬림 스트레이트핏 앵클 미드 블루 데님 <p>KRW 149,000</p></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
         <section class="preview_banner"></section>
     </div>
     <div class="lookbook_banner">
