--- a/index.html
+++ b/index.html
@@ -202,9 +202,13 @@
         <section class="preview_banner"></section>
     </div>
     <div class="lookbook_banner">
-        <li><a href="#">
-            <img src="" alt="">
-        </a></li>
+            <div class="look1">
+                <div class="item1"></div>
+            </div>
+            <div class="look2">
+                <div class="look2_row1"></div>
+                <div class="look2_row2"></div>
+            </div>
     </div>
 </div>
     
