--- a/index.html
+++ b/index.html
@@ -136,7 +136,20 @@
         </div>
         </section>
         <section class="collection_banner">
-            <div class="collec_nav"></div>
+            <div class="collec_nav">
+                <div class="flex justify-between">
+                    <div class="item1">
+                        <a href="#">
+                            <img src="images/collec1.png" alt="컬렉션1">
+                        </a>
+                    </div>
+                    <div class="item2">
+                        <a href="#">
+                            <img src="images/collec2.png" alt="컬렉션2">
+                        </a>
+                    </div>
+                </div>
+            </div>
         </section>
         <section class="best_banner">
             <div class="best_nav">
@@ -199,18 +212,108 @@
                 </div>
             </div>
         </section>
-        <section class="preview_banner"></section>
+        <div class="preview_banner">
+            <div class="prev1">
+                <div class="item1">
+                    <a href="#">
+                        <img src="images/prev1.png" alt="더알아보기1">
+                    </a>
+                </div>
+            </div>
+            <div class="prev2">
+                <div class="prev2_row1">
+                <div class="flex justify-between">
+                    <div class="item2">
+                        <a href="#">
+                            <img src="images/prev2.png" alt="예시1">
+                        </a>
+                    </div>
+                    <div class="item3">
+                        <a href="#">
+                            <img src="images/prev3.png" alt="예시2">
+                        </a>
+                    </div>
+                </div>
+                </div>
+                <div class="prev2_row2">
+                <div class="flex justify-between">
+                    <div class="item5">
+                        <a href="#">
+                            <img src="images/prev4.png" alt="예시3">
+                        </a>
+                    </div>
+                    <div class="item6">
+                        <a href="#">
+                            <img src="images/prev4.png" alt="예시4">
+                        </a>
+                    </div>
+                </div>
+                </div>
+            </div>
+        </div>
+    <section class="lookbook_banner">
+        <div class="look1_box"></div>
+        <div class="look2_box"></div>
+    </section>
+    <div class="footer_wrap clearfix">
+    <div class="footer">
+        <div class="footer1_wrap clearfix">
+            <div class="footerlogo_wrap">
+            <div class="footer_logo">
+                <a href="#">
+                    <img src="images/footerlogo.png" alt="푸터로고">
+                </a>
+            </div>
+            </div>
+            <div class="notice_wrap">
+                <div class="support_box">
+                <div class="sup_tit">SUPPORT</div>
+                <ul class="support">
+                    <li>고객 서비스</li>
+                    <li>*개인정보처리방침</li>
+                    <li>주문 / 배송 조회</li>
+                    <li>결제 방법</li>
+                </ul>
+                </div>
+                <div class="search_box">
+                <div class="search_tit">SEARCH</div>
+                <ul class="seach">
+                    <li>남성</li>
+                    <li>여성</li>
+                    <li>언더웨어</li>
+                    <li>기능성</li>
+                    <li>세일</li>
+                </ul>
+                </div>
+                <div class="info_box">
+                <div class="info_tit">COMPANY INFO</div>
+                <ul class="info">
+                    <li>Calvin Klein 소개</li>
+                    <li>직업</li>
+                </ul>
+                </div>
+            </div>
+        </div>
+        <div class="footer2_wrap clearfix">
+            <div class="footer2_logo">
+                <a href="#">
+                    <img src="images/footer2.png" alt="대한민국">
+                </a>
+            </div>
+            <div class="country_tit">
+                <li>대한민국</li>
+            </div>
+            <div class="icon_wrap">
+                <i><a href="#"><img src="" alt=""></a></i>
+                <i><a href="#"><img src="" alt=""></a></i>
+                <i><a href="#"><img src="" alt=""></a></i>
+                <i><a href="#"><img src="" alt=""></a></i>
+                <i><a href="#"><img src="" alt=""></a></i>
+                <i><a href="#"><img src="" alt=""></a></i>
+            </div>
+        </div>
     </div>
-    <div class="lookbook_banner">
-            <div class="look1">
-                <div class="item1"></div>
-            </div>
-            <div class="look2">
-                <div class="look2_row1"></div>
-                <div class="look2_row2"></div>
-            </div>
     </div>
 </div>
-    
 </body>
 </html>
