--- a/index.html
+++ b/index.html
@@ -13,10 +13,7 @@
 <div class="wrap">
     <header class="clearfix">
         <div class="nav_bg">
-            <li><a href="#"></a></li>
-            <a href="#">
-                <button class="ck1_btn"></button>
-            </a>
+            <li><a href="#">CK1 PALACE Collection & SPRING SALE 30% UP</a></li>
         </div>
         <div class="topbar_wrap clearfix">
             <div class="logo_box">
@@ -91,15 +88,15 @@
                     </li>
                     <li><a href="#">JEANS</a>
                     <ul class="sub_menu">
-                        <li><a href="#"></a></li>
-                        <li><a href="#"></a></li>
+                        <li><a href="#">MEN</a></li>
+                        <li><a href="#">WOMEN</a></li>
                     </ul>
                     </li>
                     <li><a href="#">SALE</a>
                     <ul class="sub_menu">
-                        <li><a href="#"></a></li>
-                        <li><a href="#"></a></li>
-                        <li><a href="#"></a></li>
+                        <li><a href="#">GIFT PLAN</a></li>
+                        <li><a href="#">STANDARDS</a></li>
+                        <li><a href="#">SPECIAL PRICE</a></li>
                     </ul>
                     </li>
                 </ul>
@@ -108,6 +105,8 @@
     </header>
     <ul class="slide">
         <li><a href="#"><img src="images/메인 1.png" alt="Calvin"></a></li>
+        <li><a href="#"><img src="images/main2.jpg" alt="Calvin"></a></li>
+        <li><a href="#"><img src="images/main3.jpg" alt="Calvin"></a></li>
     </ul>
     <div class="contents">
         <section class="new_banner clearfix">
@@ -117,6 +116,7 @@
                  <div class="item1">
                     <a href="#">
                         <img src="images/new1.png" alt="뉴어라벌스1">
+                        <!-- <img src="" alt=""> -->
                     </a>
                     <div class="new1_title">남성 레귤러핏 인스티튜셔널 로고 스트레치 반팔 티셔츠 <p>KRW 45,000</p></div>
                  </div>
@@ -138,15 +138,25 @@
         <section class="collection_banner">
             <div class="collec_nav">
                 <div class="flex justify-between">
+                    <div class="item1_wrapper">
                     <div class="item1">
                         <a href="#">
                             <img src="images/collec1.png" alt="컬렉션1">
                         </a>
                     </div>
+                    <div class="item1_box">
+                        <li>The CK1 Palace Collection</li>
+                    </div>
+                    </div>
+                    <div class="item2_wrapper">
                     <div class="item2">
                         <a href="#">
                             <img src="images/collec2.png" alt="컬렉션2">
                         </a>
+                    <div class="item2_box">
+                        <li>Calvin Klein 22SS</li>
+                    </div>
+                    </div>
                     </div>
                 </div>
             </div>
@@ -158,7 +168,7 @@
                     <div class="flex justify-between">
                         <div class="item1">
                             <a href="#">
-                                <img src="images/best1.png" alt="베스트1">
+                              <img src="images/best1.png" alt="베스트1">
                             </a>
                             <div class="best1_title">남성 90’S 스트레이 핏 라이트 블루 데님 <p>KRW 199,000</p></div>
                         </div>
@@ -214,38 +224,66 @@
         </section>
         <div class="preview_banner">
             <div class="prev1">
+                <div class="item1_wrapper">
                 <div class="item1">
                     <a href="#">
                         <img src="images/prev1.png" alt="더알아보기1">
                     </a>
                 </div>
+                <div class="item1_tit">
+                    <li>Calvin Klein Performance <p>NO:ZE LOOK을 만나보세요</p></li>
+                </div>
+                <div class="item1_box">
+                    <input type="button" class="btn" value="더 알아보기">
+                </div>
+                </div>
             </div>
             <div class="prev2">
                 <div class="prev2_row1">
                 <div class="flex justify-between">
+                    <div class="item2_wrapper">
                     <div class="item2">
                         <a href="#">
                             <img src="images/prev2.png" alt="예시1">
                         </a>
                     </div>
+                    <div class="item2_box">
+                        <li>여성 모던 코튼 AF 브라렛 <p>KRW 79,000</p></li>
+                    </div>
+                    </div>
+                    <div class="item3_wrapper">
                     <div class="item3">
                         <a href="#">
                             <img src="images/prev3.png" alt="예시2">
                         </a>
                     </div>
+                    <div class="item3_box">
+                        <li>여성 액티브 아이콘 크롭 반팔 티셔츠 <p>KRW 99,000</p></li>
+                    </div>
+                    </div>
                 </div>
                 </div>
                 <div class="prev2_row2">
                 <div class="flex justify-between">
-                    <div class="item5">
+                    <div class="item4_wrapper">
+                    <div class="item4">
                         <a href="#">
                             <img src="images/prev4.png" alt="예시3">
                         </a>
                     </div>
-                    <div class="item6">
+                    <div class="item4_box">
+                        <li>여성 액티브 아이콘 무아레 프린트 우븐 쇼츠 <p>KRW 119,000</p></li>
+                    </div>
+                    </div>
+                    <div class="item5_wrapper">
+                    <div class="item5">
                         <a href="#">
-                            <img src="images/prev4.png" alt="예시4">
+                            <img src="images/prev5.png" alt="예시4">
                         </a>
+                    </div>
+                    <div class="item5_box">
+                        <li>여성 액티브 아이콘 7/8 우븐 팬츠 <p>KRW 129,000 KRW 90,300 30% 할인</p></li>
+                    </div>
                     </div>
                 </div>
                 </div>
@@ -256,8 +294,7 @@
         <div class="look2_box"></div>
     </section>
     <div class="footer_wrap clearfix">
-    <div class="footer">
-        <div class="footer1_wrap clearfix">
+        <div class="footer1_wrap">
             <div class="footerlogo_wrap">
             <div class="footer_logo">
                 <a href="#">
@@ -265,7 +302,7 @@
                 </a>
             </div>
             </div>
-            <div class="notice_wrap">
+            <div class="notice_wrap clearfix">
                 <div class="support_box">
                 <div class="sup_tit">SUPPORT</div>
                 <ul class="support">
@@ -277,7 +314,7 @@
                 </div>
                 <div class="search_box">
                 <div class="search_tit">SEARCH</div>
-                <ul class="seach">
+                <ul class="search">
                     <li>남성</li>
                     <li>여성</li>
                     <li>언더웨어</li>
@@ -294,7 +331,7 @@
                 </div>
             </div>
         </div>
-        <div class="footer2_wrap clearfix">
+        <div class="footer2_wrap">
             <div class="footer2_logo">
                 <a href="#">
                     <img src="images/footer2.png" alt="대한민국">
@@ -304,15 +341,14 @@
                 <li>대한민국</li>
             </div>
             <div class="icon_wrap">
-                <i><a href="#"><img src="" alt=""></a></i>
-                <i><a href="#"><img src="" alt=""></a></i>
-                <i><a href="#"><img src="" alt=""></a></i>
-                <i><a href="#"><img src="" alt=""></a></i>
-                <i><a href="#"><img src="" alt=""></a></i>
-                <i><a href="#"><img src="" alt=""></a></i>
+                <i><a href="#"><img src="" alt="페이스북"></a></i>
+                <i><a href="#"><img src="" alt="인스타그램"></a></i>
+                <i><a href="#"><img src="" alt="트위터"></a></i>
+                <i><a href="#"><img src="" alt="카카오톡"></a></i>
+                <i><a href="#"><img src="" alt="네이버"></a></i>
+                <i><a href="#"><img src="" alt="유튜브"></a></i>
             </div>
         </div>
-    </div>
     </div>
 </div>
 </body>
