--- a/index.html
+++ b/index.html
@@ -289,9 +289,11 @@
                 </div>
             </div>
         </div>
-    <section class="lookbook_banner">
-        <div class="look1_box"></div>
-        <div class="look2_box"></div>
+    <section class="lookbook_banner clearfix">
+        <div class="look_wrap clearfix">
+            <li><a href="#"><img src="images/look1.png" alt="룩1"></a></li>
+            <li><a href="#"><img src="images/look2.png" alt="룩2"></a></li>
+        </div>
     </section>
     <div class="footer_wrap clearfix">
         <div class="footer1_wrap">
