--- a/index.html
+++ b/index.html
@@ -12,9 +12,17 @@
 <body>
 <div class="wrap">
     <header class="clearfix">
-        <div class="nav_bg">
-            <li><a href="#">CK1 PALACE Collection & SPRING SALE 30% UP</a></li>
-        </div>
+        <div class="top-banner flex-ver">
+            <div class="arrow-left">
+              <li><img src="images/arrow1.png" alt="왼쪽"></li>
+            </div>
+            <div class="text">
+              <span>CK1 PALACE Collection & SPRING SALE 30% UP</span>
+            </div>
+            <div class="arrow-right">
+              <li><img src="images/arrow2.png" alt="오른쪽"></li>
+            </div>
+          </div>
         <div class="topbar_wrap clearfix">
             <div class="logo_box">
                 <li><a href="#"><img src="images/logo.png" alt="Calvin"></a></li>
@@ -167,9 +175,9 @@
                 <div class="best_row1">
                     <div class="flex justify-between">
                         <div class="item1">
-                            <a href="#">
-                              <img src="images/best1.png" alt="베스트1">
-                            </a>
+                                <a href="#">
+                                  <img src="images/best1.png" alt="베스트1">
+                                </a>
                             <div class="best1_title">남성 90’S 스트레이 핏 라이트 블루 데님 <p>KRW 199,000</p></div>
                         </div>
                         <div class="item2">
@@ -282,76 +290,102 @@
                         </a>
                     </div>
                     <div class="item5_box">
-                        <li>여성 액티브 아이콘 7/8 우븐 팬츠 <p>KRW 129,000 KRW 90,300 30% 할인</p></li>
+                        <li>여성 액티브 아이콘 7/8 우븐 팬츠 <p>KRW 129,000&nbsp;KRW 90,300&nbsp;30% 할인</p></li>
                     </div>
                     </div>
+
                 </div>
                 </div>
             </div>
         </div>
-    <section class="lookbook_banner clearfix">
-        <div class="look_wrap clearfix">
-            <li><a href="#"><img src="images/look1.png" alt="룩1"></a></li>
-            <li><a href="#"><img src="images/look2.png" alt="룩2"></a></li>
+    <section class="look_con">
+        <div class="lookbook_wrap">
+            <div class="look1 clearfix">
+            <a href="#"><img src="images/look1.png" alt="룩북1"></a>
+            </div>
+            <div class="look2 clearfix">
+            <a href="#"><img src="images/look2.png" alt="룩북2"></a>
+            </div>
+            <div class="look_tit">
+            <li>Calvin Klein Jeans</li>
+            </div>
+            <div class="looktit_box">
+                <input type="button" class="shop_btn" value="SHOP NOW">
+            </div>
         </div>
     </section>
-    <div class="footer_wrap clearfix">
-        <div class="footer1_wrap">
-            <div class="footerlogo_wrap">
-            <div class="footer_logo">
+    <section class="footer1_con clearfix">
+        <div class="footer1_wrap clearfix">
+            <p>
                 <a href="#">
                     <img src="images/footerlogo.png" alt="푸터로고">
                 </a>
-            </div>
-            </div>
-            <div class="notice_wrap clearfix">
-                <div class="support_box">
-                <div class="sup_tit">SUPPORT</div>
-                <ul class="support">
+            </p>
+            <div class="box">
+                <h2>SUPPORT</h2>
+                <ul class="inner">
                     <li>고객 서비스</li>
                     <li>*개인정보처리방침</li>
                     <li>주문 / 배송 조회</li>
                     <li>결제 방법</li>
                 </ul>
-                </div>
-                <div class="search_box">
-                <div class="search_tit">SEARCH</div>
-                <ul class="search">
+            </div>
+            <div class="box">
+                <h2>SEARCH</h2>
+                <ul class="inner">
                     <li>남성</li>
                     <li>여성</li>
                     <li>언더웨어</li>
                     <li>기능성</li>
                     <li>세일</li>
                 </ul>
-                </div>
-                <div class="info_box">
-                <div class="info_tit">COMPANY INFO</div>
-                <ul class="info">
+            </div>
+            <div class="box">
+                <h2>COMPANY INFO</h2>
+                <ul class="inner">
                     <li>Calvin Klein 소개</li>
                     <li>직업</li>
                 </ul>
-                </div>
+            </div>
+            <div class="copy">
+               <li>피브이에이치코리아 유한회사 |</li>
+               <li>서울특별시 강남구 테헤란로 508 해성2빌딩 18층 |</li>
+               <li>대표자 : 후이혼치우제프리 |</li>
+               <li>사업자등록번호 211-86-59430 |</li>
+               <li>통신판매업 신고 : 2019-서울강남-03726 |</li>
+               <li>고객센터 : 1600-1811 |</li>
+               <li>이메일 : CustomerServiceKR@ck.com</li>
             </div>
         </div>
+    </section>
+    <section class="footer2_con">
         <div class="footer2_wrap">
             <div class="footer2_logo">
-                <a href="#">
-                    <img src="images/footer2.png" alt="대한민국">
-                </a>
-            </div>
-            <div class="country_tit">
-                <li>대한민국</li>
+            <a href="#">
+                <img src="images/footer2.png" alt="대한민국"><span>대한민국</span>
+            </a>
+            <!-- <div class="country_tit">
+                <span>대한민국</span>
+            </div> -->
             </div>
             <div class="icon_wrap">
-                <i><a href="#"><img src="" alt="페이스북"></a></i>
-                <i><a href="#"><img src="" alt="인스타그램"></a></i>
-                <i><a href="#"><img src="" alt="트위터"></a></i>
-                <i><a href="#"><img src="" alt="카카오톡"></a></i>
-                <i><a href="#"><img src="" alt="네이버"></a></i>
-                <i><a href="#"><img src="" alt="유튜브"></a></i>
+               <i><a href="#"><img src="images/페북.png" alt="페이스북"></a></i>
+               <i><a href="#"><img src="images/인스타.png" alt="인스타그램"></a></i>
+               <i><a href="#"><img src="images/트위터.png" alt="트위터"></a></i>
+               <i><a href="#"><img src="images/카톡.png" alt="카카오톡"></a></i>
+               <i><a href="#"><img src="images/네이버.png" alt="네이버"></a></i>
+               <i><a href="#"><img src="images/유튜브.png" alt="유튜브"></a></i>
+            </div>
+            <div class="flex justify-between">
+            <div class="footer_tit1">
+               <li>Copyright © 2021년 모든 저작권은 Calvin Klein에 있으며 무단 복제 및 도용을 금지합니다.</li>
+            </div>
+            <div class="footer_tit2">
+               <li>캘리포니아 공급망 투명성 & UK 현대판 노예제도 선언 | 개인정보 보호정책 | 이용 약관</li>
+            </div>
             </div>
         </div>
-    </div>
+    </section>
 </div>
 </body>
 </html>
