--- a/index.html
+++ b/index.html
@@ -121,25 +121,32 @@
         <div class="new_nav">
             <div class="arriv_title">NEW ARRIVALS</div>
             <div class="flex justify-between">
-                 <div class="item1">
+                <div class="item1">
                     <a href="#">
                         <img src="images/new1.png" alt="뉴어라벌스1">
-                        <!-- <img src="" alt=""> -->
                     </a>
                     <div class="new1_title">남성 레귤러핏 인스티튜셔널 로고 스트레치 반팔 티셔츠 <p>KRW 45,000</p></div>
-                 </div>
-                 <div class="item2">
+                </div>
+                <div class="item2">
                     <a href="#">
                         <img src="images/new2.png" alt="뉴어라벌스2">
                     </a>
                     <div class="new2_title">여성 스트레이핏 모노그램 로고 반팔 셔츠 <p>KRW 79,000</p></div>
-                 </div>
-                 <div class="item3">
+                </div>
+                <div class="item3">
                     <a href="#">
                         <img src="images/new3.png" alt="뉴어라벌스3">
                     </a>
                     <div class="new3_title">여성 인스티튜셔널 로고 보이프렌드핏 스웨트셔츠 <p>KRW 89,000</p></div>
                 </div>
+            </div>
+            <div class="slick_wrap">
+            <div class="new_slick">
+                <input type="button" class="slick_btn" value="">
+            </div>
+            <div class="new_slickline">
+                <!-- <li><a href="#"></a></li> -->
+            </div>
             </div>
         </div>
         </section>
@@ -348,25 +355,27 @@
                 </ul>
             </div>
             <div class="copy">
-               <li>피브이에이치코리아 유한회사 |</li>
-               <li>서울특별시 강남구 테헤란로 508 해성2빌딩 18층 |</li>
-               <li>대표자 : 후이혼치우제프리 |</li>
-               <li>사업자등록번호 211-86-59430 |</li>
-               <li>통신판매업 신고 : 2019-서울강남-03726 |</li>
-               <li>고객센터 : 1600-1811 |</li>
+               <li>피브이에이치코리아 유한회사 &nbsp;|</li>
+               <li>서울특별시 강남구 테헤란로 508 해성2빌딩 18층 &nbsp;|</li>
+               <li>대표자 : 후이혼치우제프리 &nbsp;|</li>
+               <li>사업자등록번호 211-86-59430</li>
+               <li>통신판매업 신고 : 2019-서울강남-03726 &nbsp;|</li>
+               <li>고객센터 : 1600-1811 &nbsp;|</li>
                <li>이메일 : CustomerServiceKR@ck.com</li>
             </div>
         </div>
     </section>
     <section class="footer2_con">
         <div class="footer2_wrap">
+            <div class="flex justify-between">
             <div class="footer2_logo">
             <a href="#">
-                <img src="images/footer2.png" alt="대한민국"><span>대한민국</span>
+                <img src="images/footer2.png" alt="대한민국">
             </a>
-            <!-- <div class="country_tit">
-                <span>대한민국</span>
-            </div> -->
+            <div class="country_tit">
+                <li>대한민국</li>
+            </div>
+            </div>
             </div>
             <div class="icon_wrap">
                <i><a href="#"><img src="images/페북.png" alt="페이스북"></a></i>
