--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
     <link rel="stylesheet" href="css/style.css" type="text/css">
     <script src="js/jquery-3.6.0.min.js"></script>
     <script src="js/script.js"></script>
+    <!--slick slider 필요 태그 st-->
+    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
+    <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.5.8/slick-theme.min.css">
+    <!-- jQuery CDN -->
+    <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <!-- slick Carousel CDN -->
+    <script type="text/javascript" src="//cdn.jsdelivr.net/jquery.slick/1.5.7/slick.min.js"></script>
+    <!--slick slider 필요 태그 en-->
 </head>
 <body>
 <div class="wrap">
@@ -111,11 +120,11 @@
             </div>
         </div>
     </header>
-    <ul class="slide">
+    <div class="slide">
         <li><a href="#"><img src="images/메인 1.png" alt="Calvin"></a></li>
         <li><a href="#"><img src="images/main2.jpg" alt="Calvin"></a></li>
         <li><a href="#"><img src="images/main3.jpg" alt="Calvin"></a></li>
-    </ul>
+    </div>
     <div class="contents">
         <section class="new_banner clearfix">
         <div class="new_nav">
